src/style.css
/* ... */
@media (max-width: 375px) {
    .profpic {
        width: 90vw;
        height: 90vw;
        object-fit: cover;
    }
    .aboutme h2 {
        position: relative;
        display: block;
        font-size: 15px;
        margin-right: 5%;
        margin-top: 5px;
    }
    .aboutme p {
        font-size: 14px;
        line-height: 1.5em;
        margin-right: 5%;
    }
}
.edutitle, .exptitle  {
    position: relative;
    color: #dedfe0;
    font-weight: 200;
    font-size: 17px;
    width: 100%;
}
.school h2 {
    font-size: 18px;
    letter-spacing: 1px;
    color: #fff;
    white-space: nowrap;
    margin-bottom: -20px;
    justify-content: space-between;
    display: flex;
}
.school h2 span {
    font-weight: 500;
    font-size: 16px;
    margin-top: 5px;
    text-align: right;
    white-space: nowrap;
}
.school h3 {
    font-size: 17px;
}
.school ul {
    margin-top: 10px;
    margin-left: 25px;
    line-height: 1.2em;
    font-weight: 400;
}
.school ul li {
    margin-bottom: 10px;
    font-size: 17px;
}
.coursestaken {
    font-style: italic;
    font-weight: 400;
}
.listheaders {
    color:#45a29e;
    text-decoration: underline;
    cursor: pointer;
    font-weight: 400;
    display: block;
    transition: 0.5s;
    width: fit-content;
}
.software, .ee, .math {
    list-style: none;
    margin-top: 15px;
}
.listheaders:hover, .software.active .listheaders:hover, .ee.active .listheaders:hover, .math.active .listheaders:hover {
    color: #fff;
    text-shadow: 0 0 10px #66fcf1;
}
.listheaders::after {
    content: " →";
}
.software.active .listheaders::after, .ee.active .listheaders::after, .math.active .listheaders::after {
    content: "   →";
    white-space: pre;
}
.softwaremodules, .eemodules, .mathmodules {
    color: #dedfe0;
    display: none;
}
.certifications {
    color: #dedfe0;
    display: block;
}
.certifications li {
    cursor: pointer;
    width: fit-content;
    transition: 0.5s;
    margin-left: 40px;
}
.certifications li:hover {
    color: #fff;
    text-decoration: underline;
}
.software.active .softwaremodules, .ee.active .eemodules, .math.active .mathmodules {
    display: block;
}
.software.active .listheaders, .ee.active .listheaders, .math.active .listheaders {
    color: #dedfe0;
}
.softwaremodules li:hover, .eemodules li:hover, .mathmodules li:hover {
    color: #fff;
    text-decoration: underline;
}
.softwaremodules li, .eemodules li, .mathmodules li {
    cursor: pointer;
    width: fit-content;
    transition: 0.5s;
    margin-left: 40px;
}
#light .school h2 span {
    opacity: 0.8;
}
#light .listheaders:hover, #light .software.active .listheaders:hover, #light .ee.active .listheaders:hover, #light .math.active .listheaders:hover {
    color: #ccb8a5;
    text-shadow: none;
}
#light .navbar ul li a, #light .software.active .listheaders, #light .ee.active .listheaders, #light .math.active .listheaders {
    color: #4d4d4d;
}
#light .softwaremodules li:hover, #light .eemodules li:hover, #light .mathmodules li:hover {
    color: #967969;
    text-decoration: underline;
}
@media (max-width: 850px) {
    .school h2 {
        justify-content: left;
        display: block;
    }
    .school h2 span {
        display: flex;
    }
    .school ul li {
        margin-left: 0px;
    }
}
@media (max-width: 620px) {
    .edutitle, .school ul li {
        max-width: 95vw;
    }
    .education header {
        top: 3%;
    }
    .edutitle {
        top: 7%;
    }
}
@media (max-width: 490px){
    .edutitle, .school ul li, .school h2 span {
        font-size: 14px;
    }
    .school h2 {
        font-size: 16px;
    }
    .school h3 {
        font-size: 15px;
    }
    .school ul {
        margin-left: 20px;
    }
    .school ul li ul {
        line-height: 14px;
    }
    .school ul li ul li {
        margin-top: 0;
        margin-left: -5px;
    }
}
.cards {
    cursor: pointer;
    margin-bottom: 30px;
    width: 100%;
    height: fit-content;
    padding: 10px 15px 8px 15px;
    border-radius: 15px;
    border-top: 1.5px solid rgba(255, 255, 255, 0);
    border-bottom: 1.5px solid rgba(0, 0, 0, 0);
}
.cards h2 {
    font-size: 18px;
    letter-spacing: 1px;
    color: #fff;
    transition: 0.5s;
    margin-bottom: -20px;
    justify-content: space-between;
    display: flex;
}
.cards h2 span {
    font-weight: 500;
    font-size: 16px;
    text-align: right;
    white-space: nowrap;
}
.cards h3 {
    font-size: 17px;
}
.cards:hover {
    background: rgba(179, 236, 236, 0.1);
    border-top: 1.5px solid rgba(255, 255, 255, 0.1);
    border-bottom: 1.5px solid rgba(0, 0, 0, 0.1);
}
.cards:hover h2 {
    color: #66fcf1;
}
.cards ul {
    margin-top: 10px;
    margin-left: 25px;
    line-height: 20px;
}
.cards ul li {
    margin-bottom: 10px;
    font-size: 17px;
    font-weight: 500;
}
.cards ol {
    margin-top: 5px;
    display: flex;
    list-style: none;
    flex-wrap: wrap;
}
.cards ol li {
    border-radius: 15px;
    padding: 5px 10px 5px 10px;
    background-color: rgba(27, 65, 66, 0.8);
    color: #85f3ec;
    font-size: 15px;
    font-weight: 500;
    white-space: nowrap;
    margin-right: 5px;
    margin-top: 5px;
}
#light .aboutme p, #light .aboutmetext, #light .edutitle, #light .school ul li, #light .exptitle, #light .cards ul li, #light .projcards {
    color: #4d4d4d;
}
#light .school h2, #light .cards h2, #light .projcards h2 {
    color: #41403f;
}
#light .cards h2 span {
    opacity: 0.8;
}
#light .listheaders, #light .cards:hover h2 {
    color: #967969;
}
#light .cards:hover {
    background: rgba(94, 67, 47, 0.1);
}
#light .cards ol li, #light .projcards ol li {
    background-color: rgba(71, 51, 36, 0.8);
    color: #e7ddd2;
}
.view {
    max-width: fit-content;
    cursor: pointer;
}
.view a {
    max-width: fit-content;
    margin-left: 15px;
    font-size: 20px;
    font-weight: bold;
    color: #c5c6c7;
    transition: 0.3s;
    text-decoration: none;
}
.view:hover a {
    color: #fff;
    text-shadow: 0 0 3px #66fcf1;
}
/* ... */

